--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pretty-proptypes",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "prettily render prop types from react components",
   "repository": "atlassian/extract-react-types",
   "main": "dist/pretty-proptypes.cjs.js",
@@ -16,14 +16,16 @@
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "@emotion/core": "^10.0.14",
-    "kind2string": "^0.7.1",
+    "kind2string": "^0.7.2",
     "react-markings": "^1.2.0"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "extract-react-types": "^0.22.0",
+    "extract-react-types": "^0.23.0",
     "jsdom": "^11.7.0",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
