Migrate changesets configuration to be compatible with v2

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,5 +1,5 @@
 {
   "changelog": ["@changesets/changelog-github", { "repo": "atlassian/extract-react-types" }],
-  "commit": false,
+  "commit": true,
   "access": "public"
 }
