--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "name": "extract-react-types-mono-repo",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
+    "start": "run-p start:*",
+    "start:watch": "preconstruct watch",
+    "start:stories": "start-storybook -p 6006",
     "test": "jest",
     "test:watch": "jest --watch",
     "changeset": "changeset",
     "apply-changesets": "changeset version",
     "release": "yarn build && changeset publish",
     "postinstall": "preconstruct dev",
-    "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
     "validate": "yarn lint && yarn test && yarn flow",
     "build": "preconstruct build",
     "clean": "yarn delete:modules && yarn delete:dist",
     "delete:dist": "bolt ws exec --parallel -- rm -rf dist",
-    "delete:modules": "bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules"
+    "delete:modules": "bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules",
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
-  "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "preconstruct": {
     "packages": [
       "packages/extract-react-types",
@@ -43,6 +46,7 @@
     "@changesets/changelog-github": "^0.2.1",
     "@changesets/cli": "^2.8.0",
     "@emotion/core": "^10.0.14",
+    "@preconstruct/cli": "^2.0.0",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
     "babel-eslint": "^10.0.1",
@@ -66,7 +70,6 @@
     "eslint-plugin-react": "^7.12.4",
     "jest-in-case": "^1.0.2",
     "jest-watch-typeahead": "^0.4.2",
-    "preconstruct": "^0.0.81",
     "react-markings": "^1.2.0",
     "resolve": "^1.10.1",
     "strip-indent": "^2.0.0"
@@ -77,7 +80,14 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/react": "^6.1.14",
+    "@storybook/storybook-deployer": "^2.8.7",
     "babel-jest": "^24.7.1",
+    "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^10.0.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -85,6 +95,7 @@
     "jest": "^24.7.1",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
