--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pretty-proptypes",
-  "version": "1.4.0",
+  "version": "1.3.0",
   "description": "prettily render prop types from react components",
   "repository": "atlassian/extract-react-types",
   "main": "dist/pretty-proptypes.cjs.js",
@@ -19,9 +19,7 @@
     "kind2string": "^0.8.1",
     "react-markings": "^1.2.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
