--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://unpkg.com/@changesets/config@1.0.1/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": true,
   "access": "public"
