--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,5 +2,6 @@
   "$schema": "https://unpkg.com/@changesets/config@1.0.1/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": true,
-  "access": "public"
+  "access": "public",
+  "baseBranch": "master"
 }
