--- a/package.json
+++ b/package.json
@@ -51,16 +51,14 @@
     "babel-errors": "^1.1.1",
     "babel-eslint": "^10.0.1",
     "babel-file": "^3.0.0",
-    "babel-file-loader": "^2.0.0",
     "babel-flow-identifiers": "^1.1.3",
     "babel-helper-simplify-module": "^2.2.1",
     "babel-identifiers": "^1.1.2",
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
     "babel-type-scopes": "^1.1.0",
-    "babylon": "^7.0.0-beta.22",
     "babylon-options": "^2.0.1",
-    "eslint": "^5.13.0",
+    "babylon": "^7.0.0-beta.22",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -68,9 +66,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint": "^5.13.0",
     "jest-in-case": "^1.0.2",
     "jest-watch-typeahead": "^0.4.2",
     "react-markings": "^1.2.0",
+    "read-file-async": "^1.0.0",
+    "resolve-async": "^1.0.1",
     "resolve": "^1.10.1",
     "strip-indent": "^2.0.0"
   },
@@ -86,13 +87,13 @@
     "@storybook/addon-links": "^6.1.14",
     "@storybook/react": "^6.1.14",
     "@storybook/storybook-deployer": "^2.8.7",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^26.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^10.0.14",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.98.0",
-    "jest": "^24.7.1",
+    "jest": "^26.0.0",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
     "npm-run-all": "^4.1.5",
