--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -25,22 +25,23 @@
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
     "babel-file": "^3.0.0",
-    "babel-file-loader": "^2.0.0",
     "babel-flow-identifiers": "^1.1.3",
     "babel-helper-simplify-module": "^2.2.1",
     "babel-identifiers": "^1.1.2",
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
     "babel-type-scopes": "^1.1.0",
-    "babylon": "^7.0.0-beta.22",
     "babylon-options": "^2.0.1",
+    "babylon": "^7.0.0-beta.22",
+    "read-file-async": "^1.0.0",
+    "resolve-async": "^1.0.1",
     "resolve": "^1.10.1",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^26.0.0",
     "flow-bin": "^0.98.0",
-    "jest": "^24.7.1",
+    "jest": "^26.0.0",
     "prettier": "^1.13.7"
   }
 }
