--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -7,9 +7,11 @@
   "author": "Atlassian",
   "repository": "atlassian/extract-react-types",
   "description": "Utility to ensure extract-react-types output can be rendered without errors",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^26.6.3",
     "extract-react-types": "^0.30.0"
   },
   "dependencies": {
