--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Setup Node.js 14.x
+      - name: Setup Node.js 21.1.0
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 21.1.0
 
       - name: Install Dependencies
         run: yarn
