--- a/package.json
+++ b/package.json
@@ -78,13 +78,12 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
-    "babel-jest": "^26.6.3",
+    "@testing-library/react": "^12.1.4",
+    "babel-jest": "^27.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^10.0.14",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.98.0",
-    "jest": "^26.0.0",
+    "jest": "^27.0.0",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
     "npm-run-all": "^4.1.5",
