Resolves minimist vulns (#254)
* formatting improvements

* Bumps various versions and removes stories

* remove bolt bump to node 21

* bump jest

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "run-p start:*",
     "start:watch": "preconstruct watch",
-    "start:stories": "start-storybook -p 6006",
     "test": "jest",
     "test:watch": "jest --watch",
     "changeset": "changeset",
@@ -18,10 +17,8 @@
     "validate": "yarn lint && yarn test && yarn flow",
     "build": "preconstruct build",
     "clean": "yarn delete:modules && yarn delete:dist",
-    "delete:dist": "bolt ws exec --parallel -- rm -rf dist",
-    "delete:modules": "bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "delete:dist": "yarn ws exec --parallel -- rm -rf dist",
+    "delete:modules": "yarn ws exec --parallel -- rm -rf node_modules && rm -rf node_modules"
   },
   "workspaces": [
     "packages/*"
@@ -46,7 +43,7 @@
     "@babel/types": "^7.0.0-beta.56",
     "@changesets/cli": "^2.22.0",
     "@emotion/core": "^10.0.14",
-    "@preconstruct/cli": "^2.0.0",
+    "@preconstruct/cli": "^2.8.12",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
     "babel-eslint": "^10.0.1",
@@ -57,22 +54,21 @@
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
     "babel-type-scopes": "^1.1.0",
-    "babylon-options": "^2.0.1",
     "babylon": "^7.0.0-beta.22",
-    "eslint-config-airbnb": "^17.1.0",
+    "babylon-options": "^2.0.1",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.12.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint": "^5.13.0",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react": "^7.37.5",
     "jest-in-case": "^1.0.2",
-    "jest-watch-typeahead": "^0.4.2",
+    "jest-watch-typeahead": "^1.0.0",
     "react-markings": "^1.2.0",
     "read-file-async": "^1.0.0",
-    "resolve-async": "^1.0.1",
     "resolve": "^1.10.1",
+    "resolve-async": "^1.0.1",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
@@ -82,18 +78,12 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
-    "@storybook/addon-actions": "^6.1.14",
-    "@storybook/addon-essentials": "^6.1.14",
-    "@storybook/addon-links": "^6.1.14",
-    "@storybook/react": "^6.1.14",
-    "@storybook/storybook-deployer": "^2.8.7",
-    "babel-jest": "^26.0.0",
+    "@testing-library/react": "^12.1.4",
+    "babel-jest": "^27.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^10.0.14",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.98.0",
-    "jest": "^26.0.0",
+    "jest": "^27.0.0",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
     "npm-run-all": "^4.1.5",
@@ -101,5 +91,6 @@
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
